--- a/subject.html
+++ b/subject.html
@@ -8,6 +8,24 @@
             Add Subject
         </button>
     </div>
+
+    <div class="table-controls">
+        <div class="control-group">
+            <label for="categoryFilter">Filter by Category:</label>
+            <select id="categoryFilter">
+                <option value="">All Categories</option>
+                <option value="General">General</option>
+                <option value="Science">Science</option>
+                <option value="IT">IT</option>
+                <option value="Bank">Bank</option>
+            </select>
+        </div>
+        <div class="control-group">
+            <label for="searchSubjects">Search:</label>
+            <input type="text" id="searchSubjects" placeholder="Search by name or book...">
+        </div>
+    </div>
+
     <div class="subject-content">
         <table class="subjects-table">
             <thead>
@@ -15,6 +33,7 @@
                     <th>Subject Name</th>
                     <th>Book Name</th>
                     <th>Total Pages</th>
+                    <th>Total Lessons</th>
                     <th>Category</th>
                     <th>Actions</th>
                 </tr>
@@ -23,6 +42,9 @@
                 </tbody>
         </table>
     </div>
+
+    <div id="pagination-controls" class="pagination-container">
+        </div>
 </div>
 
 <div id="addSubjectModal" class="modal">
@@ -45,6 +67,10 @@
                 <div class="form-group">
                     <label for="totalPages">Total Pages</label>
                     <input type="number" id="totalPages" required>
+                </div>
+                <div class="form-group">
+                    <label for="totalLessons">Total Lessons</label>
+                    <input type="number" id="totalLessons" required>
                 </div>
                 <div class="form-group">
                     <label for="category">Category</label>
