change in subject and lesson

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li class="active" id="nav-dashboard"><a href="#"><span class="material-icons">dashboard</span> Dashboard</a></li>
                     <li id="nav-subject"><a href="#"><span class="material-icons">subject</span> Subject</a></li>
-                    <li><a href="#"><span class="material-icons">library_books</span> Lesson</a></li>
+                    <li id="nav-lesson"><a href="#"><span class="material-icons">library_books</span> Lesson</a></li>
                     <li><a href="#"><span class="material-icons">topic</span> Topics</a></li>
                     <li><a href="#"><span class="material-icons">school</span> Exams</a></li>
                     <li><a href="#"><span class="material-icons">people</span> Students</a></li>
