--- a/subject.html
+++ b/subject.html
@@ -34,7 +34,9 @@
                     <th>Book Name</th>
                     <th>Total Pages</th>
                     <th>Total Lessons</th>
+                    <th>Previous BCS Question</th>
                     <th>Category</th>
+                    <th>Progress</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -71,6 +73,10 @@
                 <div class="form-group">
                     <label for="totalLessons">Total Lessons</label>
                     <input type="number" id="totalLessons" required>
+                </div>
+                <div class="form-group">
+                    <label for="previousBcsQuestion">Previous BCS Question</label>
+                    <input type="number" id="previousBcsQuestion" required>
                 </div>
                 <div class="form-group">
                     <label for="category">Category</label>
