update lesson cards

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <li class="active" id="nav-dashboard"><a href="#"><span class="material-icons">dashboard</span> Dashboard</a></li>
                     <li id="nav-subject"><a href="#"><span class="material-icons">subject</span> Subject</a></li>
                     <li id="nav-lesson"><a href="#"><span class="material-icons">library_books</span> Lesson</a></li>
-                    <li><a href="#"><span class="material-icons">topic</span> Topics</a></li>
-                    <li><a href="#"><span class="material-icons">school</span> Exams</a></li>
-                    <li><a href="#"><span class="material-icons">people</span> Students</a></li>
-                    <li><a href="#"><span class="material-icons">bar_chart</span> Results</a></li>
-                    <li><a href="#"><span class="material-icons">settings</span> Settings</a></li>
+                    <li id="nav-topics"><a href="#"><span class="material-icons">topic</span> Topics</a></li>
+                    <li id="nav-exams"><a href="#"><span class="material-icons">school</span> Exams</a></li>
+                    <li id="nav-students"><a href="#"><span class="material-icons">people</span> Students</a></li>
+                    <li id="nav-results"><a href="#"><span class="material-icons">bar_chart</span> Results</a></li>
+                    <li id="nav-settings"><a href="#"><span class="material-icons">settings</span> Settings</a></li>
                 </ul>
             </nav>
         </aside>
@@ -56,10 +56,10 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-icon"><span class="material-icons">visibility</span></div>
+                        <div class="card-icon"><span class="material-icons">library_books</span></div>
                         <div class="card-info">
-                            <h3 id="total-exams">0</h3>
-                            <p>Total Exams</p>
+                            <h3 id="total-lessons">0</h3>
+                            <p>Total Lessons</p>
                         </div>
                     </div>
                     <div class="card">
