--- a/lesson.html
+++ b/lesson.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="lesson-content">
-        <table class="lessons-table">
+        <table class="lessons-table responsive-table">
             <thead>
                 <tr>
                     <th>Lesson Name</th>
@@ -31,7 +31,8 @@
                     <th>Subject</th>
                     <th>Page Range</th>
                     <th>Past Questions</th>
-                    <th>Total Topics</th> <th>Actions</th>
+                    <th>Total Topics</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody id="lessonsTableBody">
