--- a/subject.html
+++ b/subject.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="subject-content">
-        <table class="subjects-table">
+        <table class="subjects-table responsive-table">
             <thead>
                 <tr>
                     <th>Subject Name</th>
